pbi #42498: test issue, overflow visible

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/StudentAvailability.css
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/StudentAvailability.css
@@ -88,7 +88,10 @@
 		margin-left: 5px;
 		margin-right: 5px;
 		max-height: 70%;
-		overflow-y: scroll;
+	}
+	.phone-form-availability .bootstrap-timepicker {
+		margin: 5px auto;
+		display: inherit !important;
 	}
 
 	.phone-form-availability .phone-background {
